syntax = "proto3";

package grpc.user;

import "google/protobuf/empty.proto";
import "bank.proto";
import "card.proto";
option java_outer_classname = "UserGrpc";
option java_multiple_files = true;

service UserService {
    rpc FindAllUserItems(google.protobuf.Empty) returns (UserItemsResponse);
    rpc InsertUserItem(UserItem) returns (UserItem);
    rpc FindUserItemById(UserIdRequest) returns (UserItem);
    rpc UpdateUserItemById(UserItem) returns (UserItem);
    rpc DeleteUserItemById(UserIdRequest) returns (APIResponse);
}

message APIResponse {
    string responseMessage = 1;
    int32 responseCode = 2;
}

message UserItemsResponse {
    repeated UserItem users = 1;
}

message UserItem {
    int64 id = 1;
    string userName = 2;
    string phoneNumber = 3;
    repeated grpc.bank.BankItem banks = 4;
    grpc.card.CardItem card = 5;
}

message UserIdRequest {
    double id = 1;
}